# cl-ray-tracing

./: CMakeLists.txt  README.md  build.sh
doc/: checking-opengl.md  installing-rocm.md
include/: common.h  engine.h  log.h  structs.h  types.h  util.h
kernel/: vecadd.cl
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: engine.c  main.c  util.c
